Fix elements going off screen, fix font size for mobile

--- a/src/styles/_carbon.sass
+++ b/src/styles/_carbon.sass
@@ -1,5 +1,7 @@
 #carbonads
-	@apply block relative bg-neutral-800 rounded max-w-md font-ubuntu border border-neutral-700 hover:border-neutral-600
+	@apply block relative bg-neutral-800 rounded max-w-full font-ubuntu border border-neutral-700 hover:border-neutral-600
+
+	width: 420px
 
 	.carbon-wrap
 		@apply flex p-4
